Bug 1956768 - wasm: Do a CanGC string allocation for js-string/fromCharCodeArray. r=yury

Differential Revision: https://phabricator.services.mozilla.com/D244088